@@ -1,6 +1,6 @@
 Package: npRmpi
 Version: 0.40-1
-Date: 2010-05-27
+Date: 2010-05-28
 Depends: boot, cubature
 Suggests: quantreg, MASS
 Title: Parallel nonparametric kernel smoothing methods for mixed data types
